--- a/game.html
+++ b/game.html
@@ -72,26 +72,54 @@
     </div>
     <div class="datCuoc">
         <div class="container">
-            <div class="title">Vui lòng nhập số tiền muốn cược</div>
-            <input type="number" placeholder="0" max="1000" min="0">
+            <div class="title">Thằng nào có tiền ? nạp tiền vào đôn nết cho tao!</div>
+            <input type="number" id="tienCuoc" placeholder="0" max="1000" min="0">
             <div class="half">
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                        <div class="button chan">Chẵn</div>
+                        <button class="button chan">
+                            Chẵn
+                        </button>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                        <div class="button le">Lẻ</div>
+                        <button class="button le">
+                            Lẻ
+                        </button>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                        <div class="button tai">Tài</div>
+                        <button class="button tai">
+                            Tài
+                        </button>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-6">
-                        <div class="button xiu">Xỉu</div>
+                        <button class="button xiu">
+                            Xỉu
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="history">
+        <div class="container">
+            <div class="title">Lịch sử donate ở turn này</div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Số quả trứng đã liều</th>
+                        <th>Niềm tin hi vọng</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="mid">
+            Copyright ©2023 All rights reserved | This template is made with  by Toan dep trai
+        </div>
+    </footer>
     <script src="game.js"></script>
 </body>
 
