--- a/cltx.html
+++ b/cltx.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game may man</title>
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="cltx.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -28,14 +28,20 @@
         <div class="canbutton">
             <h1>Hướng dẫn</h1>
             <div class="p">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima totam aperiam impedit porro quia iste
-                rem dolorem eum, nulla beatae blanditiis incidunt esse. Laudantium officiis itaque explicabo ratione
-                dolorem. Cupiditate.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, neque quidem earum fugit tempore quae quos
-                laudantium. Iure sit alias sapiente at, fugit corporis commodi? Unde alias accusamus dolores quisquam?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque esse ipsam dolorum! Labore, quisquam
-                dolorum dicta facere ab dolorem inventore. Ex repellendus quisquam at sit nobis incidunt eius culpa
-                nihil.
+                
+                Con số may mắn là 1 con số được tạo 1 cách ngẫu nhiên trong đoạn từ 0 tới 99<br>
+                Mỗi 60 giây, con số may mắn sẽ được làm mới<br>
+                Bạn có thể cược các ô Chẵn, Lẻ, Tài, Xỉu <br>
+                Chẵn là các số chia hết cho 2 <br>
+                Lẻ là các số không chia hết cho 2 <br>
+                Tài là các số lớn từ 50 tới 99 <br>
+                Xỉu là các con số nhỏ từ 0 tới 49 <br>
+                Bạn sẽ dự đoán xem là con số may mắn của lần tới sẽ vào Chẵn hay Tài hay Xỉu hay Lẻ <br>
+                Nếu bạn dự đoán đúng, bạn sẽ nhân đôi số tiền cược <br>
+                Còn sai bạn sẽ mất số tiền cược <br>
+                Cách chơi đơn giản, bạn chỉ cần nhập số tiền cược, sau đó bấm vào 1 trong 4 sự lựa chọn chẵn lẻ tài xỉu và chờ đợi kết quả (có thể xem chi tiết ở lịch sử đặt) <br>
+                Nếu bạn load lại trang, bạn sẽ chơi lại từ đầu. <br>
+                Chúc bạn may mắn ! <br>
             </div>
 
 
@@ -120,7 +126,7 @@
             Copyright ©2023 All rights reserved | This template is made with  by Toan dep trai
         </div>
     </footer>
-    <script src="game.js"></script>
+    <script src="cltx.js"></script>
 </body>
 
 </html>
