--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="list">
                         <a href="#home"><div class="item">Home</div></a>
                         <a href="#about"><div class="item">About</div></a>
-                        <a href="game.html"><div class="item">Game</div></a>
+                        <a href="game/game.html"><div class="item">Game</div></a>
                         <a href="#"><div class="item">Services</div></a>
                         <a href="#"><div class="item">Projects</div></a>
                         <a href="#contact"><div class="item">My contact</div></a>
@@ -60,7 +60,7 @@
                 <a href="#about"><div class="items">About</div></a>
              </div>
              <div class="item">
-                <a href="game.html"><div class="items">Game</div></a>
+                <a href="game/game.html"><div class="items">Game</div></a>
              </div>
              <div class="item">
                 <a href="#contact"><div class="items">My contact</div></a>
