--- a/game/game.html
+++ b/game/game.html
@@ -16,7 +16,7 @@
         <div class="title">Danh Sách Game</div>
         <div class="list">
             <div class="item">
-                <a href="cltx/cltx.html">
+                <a href="vqlq/vqlq.html">
                     <img src="./../images/xemgame-logo-lien-quan-mobile-garena.jpg" alt="ảnh liên quân">
                 </a>
                 <div class="desc">Vòng quay liên quân</div>
