--- a/game/vqlq/vqlq.html
+++ b/game/vqlq/vqlq.html
@@ -12,7 +12,25 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>Sắp cập nhật</h1>
-    <script src="vqlq.js"></script>
+    <main>
+        <section class="chontuong">
+            <h1>Thêm các mục</h1>
+            <button typeTuong = "dauSi" class=" tuong" >Đấu Sĩ</button>
+            <button typeTuong = "phapSu" class=" tuong">Pháp Sư</button>
+            <button typeTuong = "troThu" class=" tuong">Trợ Thủ</button>
+            <button typeTuong = "doDon" class=" tuong">Đỡ đòn</button>
+            <button typeTuong = "satThu" class=" tuong">Sát thủ</button>
+            <button typeTuong = "xaThu" class=" tuong">Xạ thủ</button>
+
+        </section>
+        <section class="main">
+            <span>
+                <ul class="wheel"></ul>
+            </span>
+            <button class="btn--wheel">Quay thưởng</button>
+        </section>
+        <h1 class="msg"></h1>
+    </main>
+    <script src="./vqlq.js"></script>
 </body>
 </html>
