quay nhieu tuong

--- a/game/vqlq/vqlq.html
+++ b/game/vqlq/vqlq.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-
+    <a href="/game/vqlq/manyRandom.html" >quay nhiều</a>
     <section class="chontuong">
         
             <h1>Thêm các mục</h1>
